; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/frenchdev/keymaps/default/extr_keymap.c_press_space.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/handwired/frenchdev/keymaps/default/extr_keymap.c_press_space.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@shift_count = common dso_local global i64 0, align 8
@KC_LSHIFT = common dso_local global i32 0, align 4
@KC_SPACE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @press_space() #0 {
  %1 = load i64, i64* @shift_count, align 8
  %2 = icmp sgt i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @KC_LSHIFT, align 4
  %5 = call i32 @unregister_code(i32 %4)
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32, i32* @KC_SPACE, align 4
  %8 = call i32 @tap_code(i32 %7)
  %9 = load i64, i64* @shift_count, align 8
  %10 = icmp sgt i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %6
  %12 = load i32, i32* @KC_LSHIFT, align 4
  %13 = call i32 @register_code(i32 %12)
  br label %14

14:                                               ; preds = %11, %6
  ret void
}

declare dso_local i32 @unregister_code(i32) #1

declare dso_local i32 @tap_code(i32) #1

declare dso_local i32 @register_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
